Added CMake reference to GLEW

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,9 +2,10 @@ cmake_minimum_required(VERSION 3.14)
 project(video-depth-renderer C CXX)
 set(CMAKE_CXX_STANDARD 14)
 
-add_subdirectory(lib/glfw)
-add_subdirectory(lib/ffmpeg)
-add_subdirectory(lib/glm)
+add_subdirectory(${PROJECT_SOURCE_DIR}/lib/glew)
+add_subdirectory(${PROJECT_SOURCE_DIR}/lib/glfw)
+add_subdirectory(${PROJECT_SOURCE_DIR}/lib/glm)
+add_subdirectory(${PROJECT_SOURCE_DIR}/lib/ffmpeg)
 
 if (APPLE)
 	list(APPEND EXTRA_LIBS
@@ -17,13 +18,13 @@ elseif(WIN32)
 	set(CMAKE_EXE_LINKER_FLAGS "-std=gnu99 -static -static-libgcc -static-libstdc++ -mwindows")
 else()
 	list(APPEND EXTRA_LIBS
-		"-lGL -lGLU -lX11"
+		"-lGL -lX11"
 	)
 endif()
 
 list(APPEND SOURCES
-	src/main.cpp
+	${PROJECT_SOURCE_DIR}/src/main.cpp
 )
 
 add_executable(video-depth-renderer ${SOURCES})
-target_link_libraries(video-depth-renderer ffmpeg glfw glm ${EXTRA_LIBS})
+target_link_libraries(video-depth-renderer glew glfw glm ffmpeg ${EXTRA_LIBS})
