Swapped GLEW for GLAD

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.14)
 project(video-depth-renderer C CXX)
 set(CMAKE_CXX_STANDARD 14)
 
-add_subdirectory(${PROJECT_SOURCE_DIR}/lib/glew)
+add_subdirectory(${PROJECT_SOURCE_DIR}/lib/glad)
 add_subdirectory(${PROJECT_SOURCE_DIR}/lib/glfw)
 add_subdirectory(${PROJECT_SOURCE_DIR}/lib/glm)
 add_subdirectory(${PROJECT_SOURCE_DIR}/lib/ffmpeg)
@@ -27,4 +27,4 @@ list(APPEND SOURCES
 )
 
 add_executable(video-depth-renderer ${SOURCES})
-target_link_libraries(video-depth-renderer glew glfw glm ffmpeg ${EXTRA_LIBS})
+target_link_libraries(video-depth-renderer glad glfw glm ffmpeg ${EXTRA_LIBS})
